# bevy_behave

./: CHANGELOG.md  Cargo.toml  README.md  readme.inc.md
examples/: chase.rs
src/: behave_trigger.rs  dyn_bundle.rs  lib.rs  plugin.rs  tests.rs
